// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tremor/Callout > renders a default-variant callout with title 1`] = `
<div
  class="flex flex-col overflow-hidden rounded-md p-4 text-sm bg-info/10 text-info"
>
  <div
    class="flex items-start"
  >
    <span
      class="font-semibold"
    >
      Heads up
    </span>
  </div>
  <div
    class="overflow-y-auto mt-2"
  >
    <p>
      Body content.
    </p>
  </div>
</div>
`;

exports[`tremor/Callout > renders an error variant 1`] = `
<div
  class="flex flex-col overflow-hidden rounded-md p-4 text-sm bg-error/10 text-error"
>
  <div
    class="flex items-start"
  >
    <span
      class="font-semibold"
    >
      Critical
    </span>
  </div>
  <div
    class="overflow-y-auto mt-2"
  >
    Something failed.
  </div>
</div>
`;
